docx yamlファイルの追記とapi.phpの追記
